# Redmine-Time-Tracker

./: .gitignore  CMakeLists.txt  ComputoolsTimeCheker.pro  ComputoolsTimeCheker.pro.user.26d1d96  actionfactory.cpp  actionfactory.h  advancedsettings.cpp  advancedsettings.h  advancedsettings.ui  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  statusindicator.cpp  statusindicator.h  statusindicator.ui
include/: actionfactory.h  advancedsettings.h  global.h  mainwindow.h  statusindicator.h
include/view/: clockview.h
resources/: res.qrc
src/: actionfactory.cpp  advancedsettings.cpp  global.cpp  main.cpp  mainwindow.cpp  statusindicator.cpp
src/view/: clockview.cpp
ui/: advancedsettings.ui  clockview.ui  mainwindow.ui  statusindicator.ui
view/: clockview.cpp  clockview.h  clockview.ui
